Napit ja valikko lisätty

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
         <!-- Bootsrtap -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <!-- .css -->
-        <link rel="stylesheet" href="style.css">
-
+        <link rel="stylesheet" href="style.css"> <!--Tumma teema-->
+        <!-- <link rel="stylesheet" href="style_vaalea.css"> --> <!--Vaalea teema-->
+        
 
     <!-- Title ------------------------------------------------------------------>
     <title>Harjoitus pohja</title>
@@ -30,6 +31,32 @@
 
     <!-- Header ------------------------------------------------------------------>
     <header>Harjoituksen nimi</header>
+
+
+
+    <!-- Navigaatio -------------------------------------------------------------->
+
+<!--
+    <ul class="nav">
+        <li class="nav-item">
+            <a class="nav-link active" href="#">Active</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+        </li>
+    </ul>
+-->
+
+
+    <!-- Nappit ------------------------------------------------------------------>
+
+<!--
+    <button type="button" class="btn btn-primary">Nappi</button>
+    <button type="button" class="btn btn-primary">Nappi</button>
+-->
 
 
 
