--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
     <!-- Navigaatio -------------------------------------------------------------->
 
 <!--
-    <ul class="nav">
+    <ul id="navigaatio">
         <li class="nav-item">
-            <a class="nav-link active" href="#">Active</a>
+            <a class="nav-link active" href="#">Linkki 1</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#">Linkki 2</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#">Linkki 3</a>
         </li>
     </ul>
 -->
@@ -54,9 +54,11 @@
     <!-- Nappit ------------------------------------------------------------------>
 
 <!--
-    <button type="button" class="btn btn-primary">Nappi</button>
-    <button type="button" class="btn btn-primary">Nappi</button>
--->
+    <div id="napit">
+        <button type="button" class="btn btn-primary">Nappi</button>
+        <button type="button" class="btn btn-primary">Nappi</button>
+    </div>
+    -->
 
 
 
